# openclaw-cpp

./: CMakeLists.txt  README.md  RELEASE.md  config.ini
doc/: howto_setup_multi_agents.md  openclaw.json.multi_agents  phase2_architecture.md
include/agent/: Agent.h  AgentManager.h
include/communication/: Communicator.h  MessageSystem.h
include/config/: ConfigManager.h
include/events/: Event.h  EventDispatcher.h
include/logging/: Logger.h
include/message/: MessageSystem.h
include/task/: Task.h  TaskScheduler.h
reports/: daily_report_2026-02-17.md  daily_report_2026-02-18.md  daily_report_2026-02-19.md
src/: main.cpp
src/agent/: Agent.cpp  AgentManager.cpp
src/communication/: Communicator.cpp  MessageSystem.cpp
src/config/: ConfigManager.cpp
src/events/: EventDispatcher.cpp
src/logging/: Logger.cpp
src/task/: Task.cpp  TaskScheduler.cpp
tests/: CMakeLists.txt  CommunicatorTest.cpp  ConfigManagerTest.cpp  EventDispatcherTest.cpp  LoggerTest.cpp
